Kick off game UI
- add players in the UI and save them to the current game

--- a/jeepscore.html
+++ b/jeepscore.html
@@ -43,4 +43,9 @@
     <button id="startGame">Start</button>
     <button id="resetGame">Reset</button>
   </div>
+
+<script>
+// Main
+window.gameUi = new GameUI();
+</script>
 </body>
