--- a/jeepscore.html
+++ b/jeepscore.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
+    .playerDelete {
+      color: red;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
     .leftspace {
       margin-left: 2em;
     }
