Preparing for game panel

--- a/jeepscore.html
+++ b/jeepscore.html
@@ -38,11 +38,16 @@
 
 <body>
   <div class="game">
-    <fieldset id="players">
-      <legend>Players</legend>
-      <div>
-        <div id="playerContainer"></div>
+    <fieldset id="playerEntryPanel">
+      <legend>Player Entry</legend>
+        <div id="playerEntryContainer"></div>
         <button id="addPlayer">Add Player</button>
+    </fieldset>
+
+    <fieldset id="gamePanel">
+      <legend>Game On!</legend>
+      <div>
+        <div id="playerContainer"> </div>
       </div>
     </fieldset>
 
