Show players+bids in game after start

--- a/jeepscore.html
+++ b/jeepscore.html
@@ -75,6 +75,13 @@
     </div>
   </template>
 
+  <template id="playerInGameTmpl">
+    <div class="playerInGame">
+      <input class="playerName" type="text" size="15" readonly></input>
+      <input class="playerBid" type="text" size="4" readonly></input>
+    </div>
+  </template>
+
   <div class="game">
     <fieldset id="playerEntryPanel">
       <legend>Player Entry</legend>
