--- a/jeepscore.html
+++ b/jeepscore.html
@@ -37,25 +37,25 @@
       white-space: nowrap;
     }
 
-    #countContainer div {
+    .countContainer div {
       font-size: 600%;
       max-width: 88vw;
       overflow-x: hidden;
       text-align: center;
     }
 
-    #deccount {
+    .deccount {
       font-size: 300%;
       font-weight: bold;
       margin-top: -0.4ex;
     }
 
-    #inccount {
+    .inccount {
       font-size: 300%;
       font-weight: bold;
     }
 
-    #counter {
+    .counter {
       font-size: 600%;
       font-weight: bold;
     }
@@ -68,8 +68,8 @@
   <template id="playerEntryTmpl">
     <div class="playerEntry">
       <span class="playerDelete">&#x24cd;</span>
-      <input class="playerName" type="text" size="15" placeholder="Player name" minlength="1" required></input>
-      <input class="playerBid" type="number" size="4" placeholder="Bid" minlength="1" inputmode="numeric" required></input>
+      <input class="playerName" type="text" size="15" placeholder="Player name" minlength="1" maxlength="15" required></input>
+      <input class="playerBid" type="number" size="4" placeholder="Bid" minlength="1" maxlength="4" inputmode="numeric" required></input>
       <span class="playerEntryError" title="Name and bid require values">&#x2757;</span>
       <button class="bidButton">Bid!</button>
     </div>
@@ -82,6 +82,15 @@
     </div>
   </template>
 
+  <template id="gameContainerTmpl">
+    <div class="playerContainer"></div>
+    <div class="countContainer">
+      <div class="inccount">&#x25B2;</div>
+      <div class="counter"></div>
+      <div class="deccount">&#x25BC;</div>
+    </div>
+  </template>
+
   <div class="game">
     <fieldset id="playerEntryPanel">
       <legend>Player Entry</legend>
@@ -91,13 +100,7 @@
 
     <fieldset id="gamePanel">
       <legend>Game On!</legend>
-      <div>
-        <div id="playerContainer"></div>
-        <div id="countContainer">
-          <div id="inccount">&#x25B2;</div>
-          <div id="counter"></div>
-          <div id="deccount">&#x25BC;</div>
-        </div>
+      <div id="gameContainer">
       </div>
     </fieldset>
 
