Add end game button
- not hooked up yet

--- a/jeepscore.html
+++ b/jeepscore.html
@@ -105,6 +105,7 @@
     </fieldset>
 
     <button id="startGame">Start</button>
+    <button id="endGame">End</button>
     <button id="resetGame">Reset</button>
   </div>
 
