Add min max spread split scoring algorithm
- this is the usual algorithm I've used so far:  each player gets
  assigned a range in which the count must fall for them to win.  The
  range is the difference between the min and max of all bids, split
  between each player with the player's bid centered in the range.
- con:  players that bid very large can make everyone a winner because
  the range will be correspondingly large

--- a/jeepscore.html
+++ b/jeepscore.html
@@ -59,6 +59,10 @@
       font-size: 600%;
       font-weight: bold;
     }
+
+    .playerInGame .playerName {
+      width: 50vw;
+    }
   </style>
 
   <script src="jeepscore.js"></script>
