Clearly indicate new game player entry

--- a/jeepscore.html
+++ b/jeepscore.html
@@ -127,7 +127,7 @@
 
   <div class="game">
     <fieldset id="playerEntryPanel">
-      <legend>Player Entry</legend>
+      <legend>New Game</legend>
         <div id="playerEntryContainer"></div>
         <button id="addPlayer">Add Player</button>
     </fieldset>
