Make in-game player list fill width

--- a/jeepscore.html
+++ b/jeepscore.html
@@ -72,6 +72,10 @@
     .timeTable {
       font-size: 80%;
     }
+
+    .playerContainer {
+      width: 100%;
+    }
   </style>
 
   <script src="jeepscore.js"></script>
