Emphasize game has ended

--- a/jeepscore.html
+++ b/jeepscore.html
@@ -74,6 +74,10 @@
       font-size: 80%;
     }
 
+    .endTime {
+      font-weight: bold;
+    }
+
     .playerContainer {
       width: 100%;
     }
