Light grey background for finished games
- more visually obvious that the game is done

--- a/jeepscore.html
+++ b/jeepscore.html
@@ -25,6 +25,10 @@
       width: 7ex;
     }
 
+    .finishedGame {
+      background-color: lightgrey;
+    }
+
     button {
       margin: 0.5em;
     }
