Add jeep count and player count to past game display

--- a/jeepscore.html
+++ b/jeepscore.html
@@ -184,7 +184,7 @@
   <template id="pastGameTmpl">
     <label class="pastGameLabel">
       <input type="checkbox"></input>
-      <span class="labelText"</span>
+      <span class="labelText"></span>
     </label>
   </template>
 
