ohno style looks better bold

--- a/jeepscore.html
+++ b/jeepscore.html
@@ -106,6 +106,7 @@
       background-color: white;
       color: red;
       font-size: 100vw;
+      font-weight: bold;
       height: 100%;
       left: 0;
       opacity: 80%;
