Implement deleting all saved games

--- a/jeepscore.html
+++ b/jeepscore.html
@@ -182,7 +182,7 @@
         <div class="buttonRow">
           <button id="loadGameButton">Load</button>
           <button id="deleteGameButton">Delete</button>
-          <button id="deleteAllGamesButton">Delete All Games</button>
+          <button id="deleteAllGamesButton">Delete All</button>
         </div>
       </div>
     </fieldset>
