Support naming a game
- names can provide an easy mechanism to create a memorable reminder of
  the game
- names can be changed any time and don't affect the game parameters
- game name can be set to empty to return it to the default of the
  pretty time at which the game was started

--- a/jeepscore.html
+++ b/jeepscore.html
@@ -94,11 +94,12 @@
 
     .pastGamesList {
       font-family: monospace;
+      font-size: 90%;
       width: 100%;
     }
 
     .pastGameLabel {
-      display: block;
+      display: inline;
       width: 100%;
     }
 
@@ -126,6 +127,10 @@
 
     .scoreMethod {
       font-size: 80%;
+    }
+
+    .pastGameEntry .edit {
+      margin-left: 1em;
     }
 
     #scoreHelp {
@@ -224,10 +229,13 @@
   </template>
 
   <template id="pastGameTmpl">
-    <label class="pastGameLabel">
-      <input type="checkbox"></input>
-      <span class="labelText"></span>
-    </label>
+    <div class="pastGameEntry">
+      <label class="pastGameLabel">
+        <input type="checkbox"></input>
+        <span class="labelText"></span>
+      </label>
+      <span class="edit">&#x1f589;</span>
+    </div>
   </template>
 
   <template id="newGameTmpl">
