--- a/jeepscore.html
+++ b/jeepscore.html
@@ -94,7 +94,6 @@
 
     .pastGamesList {
       font-family: monospace;
-      font-size: 90%;
       width: 100%;
     }
 
@@ -234,7 +233,9 @@
         <input type="checkbox"></input>
         <span class="labelText"></span>
       </label>
-      <span class="edit">&#x1f589;</span>
+      <span class="edit">
+        <img src="edit-24px.svg">
+      </span>
     </div>
   </template>
 
