--- a/jeepscore.html
+++ b/jeepscore.html
@@ -128,6 +128,11 @@
       font-size: 80%;
     }
 
+    .pastGameEntry {
+      display: flex;
+      justify-content: space-between;
+    }
+
     .pastGameEntry .edit {
       margin-left: 1em;
     }
