Use visible unicode characters
- instead of hex HTML entities, so you can actually see what the
  character is

--- a/jeepscore.html
+++ b/jeepscore.html
@@ -168,7 +168,7 @@
 <body>
   <template id="playerEntryTmpl">
     <div class="playerEntry">
-      <span class="playerDelete">&#x24cd;</span>
+      <span class="playerDelete">Ⓧ</span>
       <input class="playerName" type="text" size="15" placeholder="Player name" minlength="1" maxlength="15" required></input>
       <input class="playerBid" type="number" size="4" placeholder="Bid" minlength="1" maxlength="4" inputmode="numeric" required></input>
       <button class="bidButton">Bid!</button>
@@ -202,16 +202,16 @@
         <table class="scoreBoard">
         </table>
         <div class="countContainer">
-          <div class="inccount">&#x25B2;</div>
+          <div class="inccount">▲</div>
           <div class="counter"></div>
-          <div class="deccount">&#x25BC;</div>
+          <div class="deccount">▼</div>
         </div>
         <div class="buttonRow gameControl">
           <button id="endGame">End</button>
           <label class="scoreMethod">Scoring:&nbsp;
             <select class="scoreAlgo">
             </select>
-            <span id="scoreHelp">&#x2753;</span>
+            <span id="scoreHelp">❓</span>
           </label>
         </div>
       </div>
