Improve styling for past game rows
- shading for finished game should fill row
- slightly smaller font so longer names fit better on mobile

--- a/jeepscore.html
+++ b/jeepscore.html
@@ -128,10 +128,15 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      font-size: 90%;
     }
 
     .pastGameEntry .ended {
       background-color: lightgrey;
+    }
+
+    .pastGameEntry .rowColor {
+      width: 100%;
     }
 
     .pastGameEntry .current span.arrow {
