Fix player name sort bug
- sort on name, not object

--- a/jeepscore.html
+++ b/jeepscore.html
@@ -812,7 +812,7 @@ class GameUI
         GameUI.buildScoreBoardHeader($table.insertRow(),
             scoreData.columns);
 
-        for (let v of Object.values(scoreData.data).sort((a,b) => a.name.localeCompare(b)))
+        for (let v of Object.values(scoreData.data).sort((a,b) => a.name.localeCompare(b.name)))
         {
             GameUI.buildScoreBoardPlayerRow($table.insertRow(),
                 scoreData.columns, v);
