--- a/jeepscore.html
+++ b/jeepscore.html
@@ -174,6 +174,24 @@
     #help {
       background-color: white;
     }
+
+    .plug {
+      font-size: 70%;
+      padding-top: 1ex;
+      color: #b9b9b9;
+    }
+
+    .plug a {
+      text-decoration: none;
+    }
+
+    .plug a:link {
+      color: #b9b9b9;
+    }
+
+    .plug a:visited {
+      color: #b9b9b9;
+    }
   </style>
 
 
@@ -1541,6 +1559,10 @@ class GameUI
     <div id="currentGameSlot"></div>
     <div id="newGameSlot"></div>
     <div id="pastGamesSlot"></div>
+  </div>
+
+  <div class="plug">
+    <a href="https://github.com/paxunix/jeepscore" target="_blank">Check out this project on Github</a>
   </div>
 
 <script>
