Improve wording for price is right scoring

--- a/jeepscore.html
+++ b/jeepscore.html
@@ -1538,8 +1538,8 @@ class GameUI
       If the count is within the player's range, that player is a winner.
 
       <h3>Price Is Right</h3>
-      Like in the game show, a player whose bid is closest to the count
-      without going over is the winner.
+      Like in the game show, the winner is the player whose bid is closest
+      to the count without going over.
     </div>
   </template>
 
