--- a/jeepscore.html
+++ b/jeepscore.html
@@ -85,6 +85,8 @@
 
     .gamemeta {
       font-size: 80%;
+      display: flex;
+      justify-content: space-between;
     }
 
     .endTime {
@@ -150,11 +152,6 @@
       margin-left: 1em;
     }
 
-    #scoreHelp {
-      padding-left: 0.2em;
-      padding-right: 0.5em;
-    }
-
     #ohno {
       background-color: white;
       height: 100%;
@@ -168,10 +165,6 @@
     #ohno img {
       max-height: 100vh;
       max-width: 100vw;
-    }
-
-    #help {
-      background-color: white;
     }
 
     .plug {
@@ -1114,9 +1107,6 @@ class GameUI
         GameUI.updateTimes(gameContainer, game);
         GameUI.setupScoringSelector(gameContainer, SCORE_ALGORITHMS, game);
 
-        gameContainer.querySelector("#scoreHelp")
-            .addEventListener("click", GameUI.showHelpDialog);
-
         if (game.getEndTime())
             gameContainer.querySelector("#gameContainer")
                 .classList.add("finishedGame");
@@ -1391,27 +1381,6 @@ class GameUI
 
         window.setTimeout(() => document.querySelector("#ohno").remove(), 500);
     }
-
-
-    static showHelpDialog()
-    {
-        let $dialog = document.createElement("dialog");
-        let $helpDiv = GameUI.cloneFromTemplate(document, "#scoreHelpTmpl");
-
-        GameUI.replaceChildrenWithElement($dialog, $helpDiv);
-
-        $dialog.addEventListener("close", evt => {
-            $dialog.remove();
-        });
-
-        $dialog.addEventListener("click", evt => {
-            $dialog.remove();
-        });
-
-        document.body.appendChild($dialog);
-
-        $dialog.showModal();
-    }
 }
   </script>
 </head>
@@ -1464,7 +1433,6 @@ class GameUI
           <label class="scoreMethod">Scoring:&nbsp;
             <select class="scoreAlgo">
             </select>
-            <span id="scoreHelp">❓</span>
           </label>
         </div>
       </div>
@@ -1515,32 +1483,6 @@ class GameUI
           </div>
         </div>
     </fieldset>
-  </template>
-
-  <template id="scoreHelpTmpl">
-    <div id="help">
-      <h2>Scoring Algorithms</h2>
-
-      <h3>Spread Split</h3>
-      The difference between the highest and lowest bid (the spread) is
-      divided across each player (the split, rounded down) and their range
-      is their bid plus or minus the split.  For example, if player A bids
-      10, and player B bids 20, and player C bids 22, the spread is 12
-      (highest bid 22 - lowest bid 10) and the split is 4 (spread 12 / 3
-      players).  So:
-      <p>
-      Player A's range is 6 (bid 10 - split 4) to 14 (bid 10 + split 4)
-      <p>
-      Player B's range is 16 (bid 20 - split 4) to 24 (bid 20 + split 4)
-      <p>
-      Player C's range is 18 (bid 22 - split 4) to 26 (bid 22 + split 4)
-      <p>
-      If the count is within the player's range, that player is a winner.
-
-      <h3>Price Is Right</h3>
-      Like in the game show, the winner is the player whose bid is closest
-      to the count without going over.
-    </div>
   </template>
 
   <template id="ohNoTmpl">
